--- a/Seawise.csproj
+++ b/Seawise.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\images\equipmentPhotos\" />
     <Folder Include="wwwroot\images\ownerPhotos\" />
     <Folder Include="wwwroot\images\shipPhotos\" />
     <Folder Include="wwwroot\js\" />
