--- a/Seawise.csproj
+++ b/Seawise.csproj
@@ -25,13 +25,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\images\employeePhotos\" />
     <Folder Include="wwwroot\images\equipmentPhotos\" />
     <Folder Include="wwwroot\images\ownerPhotos\" />
     <Folder Include="wwwroot\images\shipPhotos\" />
